the_project/ping-pong-app/manifests/deployment.yaml
# the_project/ping_pong/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-claim
      containers:
        - name: ping-pong
          image: lepi23/ping-pong-app  # or your Docker Hub tag
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
