the_project/ping-pong-app/manifests/service.yaml
# the_project/ping_pong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  selector:
    app: ping-pong
  ports:
    - port: 80
      targetPort: 3000
